# gtest-policies

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/01_dynamic_memory_allocation/: CMakeLists.txt  main.cpp
example/01_getting_started/: CMakeLists.txt  main.cpp
example/01_memory_leak_detection/: CMakeLists.txt  main.cpp
example/02_dynamic_memory_allocation/: CMakeLists.txt  main.cpp
example/02_scoped_policies/: CMakeLists.txt  main.cpp
example/03_standard_output/: CMakeLists.txt  main.cpp
include/gtest_policies/: gtest_policies.h
include/gtest_policy/: gtest_policy.h
src/: CMakeLists.txt  gtest_policies-alloc.cpp  gtest_policies-context.cpp  gtest_policies-listener.cpp  gtest_policies-ostream.cpp  gtest_policies-policies.cpp  gtest_policy-alloc.cpp  gtest_policy-context.cpp  gtest_policy-listener.cpp  gtest_policy-ostream.cpp  gtest_policy-policies.cpp
test/: CMakeLists.txt  gtest_policies-alloc_test.cpp  gtest_policies-context_test.cpp  gtest_policies-ostream_test.cpp  gtest_policies-policy_test.h  gtest_policy-alloc_test.cpp  gtest_policy-context_test.cpp  gtest_policy-ostream_test.cpp  gtest_policy-policy_test.h  gtest_policy_test.cpp  main.cpp
