# Copyright(C) 2019 - 2020 Håkan Sidenvall <ekcoh.git@gmail.com>.
# This file is subject to the license terms in the LICENSE file found in the 
# root directory of this distribution.

add_subdirectory(01_getting_started)
add_subdirectory(02_dynamic_memory_allocation)
add_subdirectory(03_standard_output)
